@@ -1,1 +1,5 @@
 Nama Foldernya ganti jadi "OOADLab" kalo gak dia gamau jalan :D
+
+Buat Run Configurationnya:
+Mainnya ada di 'view.Main'
+VM Argumentsnya "--module-path [path to lib in javafx] --add-modules javafx.controls,javafx.fxml"
